--- a/week2/index.html
+++ b/week2/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>My first paragraph</p>
     <p>My first paragraph</p>
+    <p>My first paragraph</p>
+    <p>My first paragraph</p>
     <img src="images/7f71411fee_1044.jpg"
     width="1000"/>
 
